<resources>
    <string name="app_name">Trigger</string>
    <string name="AdapterTogglePrompt">Choose Action:</string>
    <string name="RingerTypePrompt">Choose a Ringer Type:</string>
    <string name="limitThreshholdPrompt">Select a unit:</string>
    <string name="VibratePrompt">Choose when to vibrate:</string>
    <string name="AuthTogglePrompt">Choose Encryption:</string>
    <string name="menu_new_tag">New Task</string>
    <string name="menu_help">About</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_chooser_mail">Send Email</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="adapterWifi">Wifi</string>
    <string name="adapterBluetooth">Bluetooth</string>
    <string name="timeSeconds">Seconds</string>
    <string name="timeMinutes">Minutes</string>
    <string name="timeHours">Hours</string>
    <string name="enableText">Enable</string>
    <string name="disableText">Disable</string>
    <string name="toggleText">Toggle</string>
    <string name="alwaysText">Always</string>
    <string name="neverText">Never</string>
    <string name="whenSilentText">When sound is off</string>
    <string name="authTypeOpen">Open</string>
    <string name="authTypeWPA2">WPA2</string>
    <string name="authTypeWPA">WPA</string>
    <string name="authTypeWEP">WEP</string>
    <string name="ringerTypeSilent">Silent</string>
    <string name="ringerTypeVibrate">Vibrate</string>
    <string name="ringerTypeNormal">Normal</string>
    <string name="dialogOK">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="dialogSave">Save</string>
    <string name="dialogClose">Close</string>
    <string name="dialog_run">Run Task</string>
    <string name="menuWireless">Wireless &amp; Networks</string>
    <string name="menuBluetooth">Bluetooth</string>
    <string name="menuSound">Sounds &amp; Volume</string>
    <string name="menuAlarm">Alarms</string>
    <string name="menuCheckin">Social Media</string>
    <string name="menuTasker">Tasker</string>
    <string name="menuDisplay">Display</string>
    <string name="addOptionsAddText">Add to Task</string>
    <string name="displayAlarmSet">Set alarm</string>
    <string name="displayListAlarmSet">Set timer</string>
    <string name="defaultAlarmText">Touch to set alarm time</string>
    <string name="layoutAlarmSetText">Set alarm for</string>
    <string name="layoutAlarmSelectTimeText">Touch to set alarm time</string>
    <string name="layoutAlarmForwardText">minutes from now</string>
    <string name="appListLoadingText">Loading Application list</string>
    <string name="listLaunchText">Launch</string>
    <string name="listLaunchTextCustom">Launch activity</string>
    <string name="listNavText">Navigate to</string>
    <string name="layoutAppLaunchURL">Open a URL/URI</string>
    <string name="layoutAppLaunchNavigation">Navigation</string>
    <string name="layoutAppLaunchNavigationText">Destination</string>
    <string name="optionsSocialFoursquare">Foursquare: Check in here</string>
    <string name="optionsSocialFoursquareSearching">Searching</string>
    <string name="optionsSocialFoursquareSearchTitle">Matching venues</string>
    <string name="optionsSocialFoursquareVenue">Foursquare: Check in at a venue</string>
    <string name="optionsSocialFoursquareVenueTitle">Venue</string>
    <string name="optionsSocialFoursquareVenueEmpty">No venue selected</string>
    <string name="optionsSocialFoursquareVenueSub">check in to a specific venue</string>
    <string name="optionsSocialFacebook">Facebook: Check in</string>
    <string name="optionsSocialPlaces">Google Places: Check in</string>
    <string name="optionsSocialTwitter">Twitter: Tweet</string>
    <string name="optionsFoursquareSearchFind">Find</string>
    <string name="optionsFoursquareSearchNear">near</string>
    <string name="listFacebookText">Check in to Facebook</string>
    <string name="listFoursquareText">Check in to Foursquare</string>
    <string name="listFoursquareVenueText">Check in at</string>
    <string name="listPlacesText">Check in to Google Places</string>
    <string name="listTweetText">Post Tweet</string>
    <string name="locationDisabledTitle">Location disabled</string>
 <string name="locationDisabledText">Unable to get location. Please enable a location
  source.</string>
    <string name="listHotspotText">Portable Hotspot</string>
    <string name="layoutHotspotActionText">Action:</string>
    <string name="layoutHotspotSSIDText">SSID:</string>
    <string name="layoutHotspotAuthTypeText">Auth Type:</string>
    <string name="layoutHotspotAuthKeyText">Auth Key:</string>
    <string name="soundRingerTypeText">Set Ringer type</string>
    <string name="listSoundRingtone">Set Ringtone:</string>
    <string name="listSoundNotification">Set Notification:</string>
    <string name="listSoundRingerVolume">Ringer Volume</string>
    <string name="listSoundMediaVolume">Media Volume</string>
    <string name="listSoundAlarmVolume">Alarm Volume</string>
    <string name="listSoundNotificationVolume">Notification Volume</string>
    <string name="listSoundVibrate">Vibrate when ringing</string>
    <string name="taskerNotInstalled">Tasker not installed</string>
    <string name="layoutTaskerLaunchText">Tasker Task</string>
    <string name="layoutTaskerSelect">Select task</string>
    <string name="layoutTaskerHelpText">Note: Tasker *must* be installed before this app and the preference Misc / Allow External Access must be set in Tasker\'s UI.\n\nIf you are having issues with the tasks not firing please uninstall both apps and reinstall Tasker prior to installing Trigger.</string>
    <string name="wifiOptionsOperateWifi">Wifi On/Off</string>
    <string name="wifiOptionsConfigureSSID">Wifi Connect</string>
    <string name="wifiOptionsOperateBluetooth">Bluetooth On/Off</string>
    <string name="wifiOptionsBluetoothDiscoverable">Bluetooth Discoverability</string>
    <string name="wifiOptionsAutoSync">Auto-sync</string>
    <string name="wifiOptionsAirplaneMode">Airplane mode</string>
    <string name="hotspotOptions">Wifi Hotspot</string>
    <string name="soundOptionsRinger">Sound Profile</string>
    <string name="soundOptionsRingtone">Ring tone</string>
    <string name="soundOptionsRingVolume">Ring volume</string>
    <string name="soundOptionsNotificationtone">Notification tone</string>
    <string name="soundOptionsNotificationVolume">Notification volume</string>
    <string name="soundOptionsMediaVolume">Media volume</string>
    <string name="soundOptionsMediaStart">Media playback</string>
    <string name="soundOptionsAlarmVolume">Alarm volume</string>
    <string name="soundOptionsVibrate">Vibrate when ringing</string>
    <string name="listWifiAirplaneModeText">Airplane Mode</string>
    <string name="listWifiAutoSync">Auto-sync</string>
    <string name="listWifiConfigureConnectText">Connect to</string>
    <string name="listWifiBluetoothDiscoverableText">Bluetooth Discoverable</string>
    <string name="listWifiAssociateText">Connect to</string>
    <string name="layoutWifiSSIDText">SSID:</string>
    <string name="layoutWifiAuthTypeText">Auth Type:</string>
    <string name="layoutWifiAuthKeyText">Auth Key:</string>
    <string name="builderInvalidName">Please enter a valid name</string>
    <string name="titleSelectAction">Choose an Action</string>
    <string name="titleConfigureAction">Configure Actions</string>
    <string name="buttonTextAdd">Add actions</string>
    <string name="layoutPreferencesTitleText">Settings</string>
    <string name="layoutPreferencesSelectNotification">Notification Ringtone</string>
    <string name="layoutPreferencesVibrate">Vibrate</string>
    <string name="layoutPreferencesRateLimitingEnable">Save</string>
    <string name="layoutPreferencesRateLimitingDisable">Disable</string>
    <string name="layoutPreferencesVibrateOptionTitle">When a tag is read</string>
    <string name="layoutPreferencesVibrateOptionEnable">Always vibrate</string>
    <string name="layoutPreferencesVibrateOptionDisable">Never vibrate</string>
    <string name="layoutPreferencesVibrateSubAlways">Always vibrate</string>
    <string name="layoutPreferencesVibrateSubNever">Never vibrate</string>
    <string name="layoutPreferencesDebugOutput">Debugging</string>
    <string name="layoutPreferencesDebugSend">Send debugging log</string>
    <string name="layoutPreferencesEnableLimitingSub">Disabled</string>
    <string name="layoutPreferencesUsage">Allow Google Analytics</string>
    <string name="layoutPreferencesNotificationsTitle">Notifications</string>
    <string name="layoutPreferencesAdvancedTitle">Advanced</string>
    <string name="layoutDisplayBrightnessLevel">Brightness</string>
    <string name="layoutAppDeskDock">Desktop Dock</string>
    <string name="layoutAppDeskDockSub">This may not have an effect on all devices.</string>
    <string name="layoutAppCarDock">Car Dock</string>
    <string name="layoutPhoneSMS">Send a Text Message</string>
    <string name="optionsPhoneSMSTo">To</string>
    <string name="optionsPhoneSMSMessage">Message</string>
    <string name="optionsPhoneSMSNote">This will open your SMS app with the To and Message fields filled out. To automatically send the message tap this message to download the SMS Plugin from the play store.</string>
    <string name="layoutPreferencesNFCAirplane">Enable NFC in airplane mode</string>
    <string name="menu_context_run">Run</string>
    <string name="layoutPreferencesNotificationsSubNone">None</string>
    <string name="layoutPreferencesSwitchTimeout">Reset switch tasks after 12 hours</string>
    <string name="carDockDrivingMode">Include Driving Mode (Samsung Galaxy devices)</string>
    <string name="layoutEmailAddress">Email Address</string>
    <string name="layoutEmailMessage">Message (optional)</string>
    <string name="layoutEmailSubjectHint">Subject</string>
    <string name="layoutEmailMessageHint">Message</string>
    <string name="title_tag_limiting">Prevent repetition</string>
    <string name="show_welcome">Show welcome and hints</string>
    <string name="set_alarm_app">Set preferred alarm app</string>
    <string name="menu_context_edit">Edit</string>
    <string name="set_media_app">Set preferred media player</string>
    <string name="day_sunday">SUN</string>
    <string name="day_monday">MON</string>
    <string name="day_tuesday">TUE</string>
    <string name="day_wednesday">WED</string>
    <string name="day_thursday">THU</string>
    <string name="day_friday">FRI</string>
    <string name="day_saturday">SAT</string>
    <string name="pref_show_bytes">Show task size</string>
    <string name="sign_in_trial">Sign in with Google+ to start a free 7-day trial or upgrade below.</string>
    <string name="upgrade_heading">The feature you\'ve selected is limited to Trigger PRO.</string>
    <string name="start_trial">Start trial</string>
    <string name="upgrade">Upgrade</string>
    <string name="show_actions_in_list">Descriptive task list</string>
    <string name="any_device">any device</string>
    <string name="power_service_on">Battery and Charging triggers will use a foreground service.  This will show an ongoing notification but will prevent the OS from killing the service required to monitor these events.</string>
    <string name="power_service_pref">Foreground service for Power triggers</string>
    <string name="request_root_access">Request root access</string>
    <string name="emulate_hardware_dock">Emulate hardware dock (requires root)</string>
    <string name="constraint_connected">Connected to</string>
    <string name="constraint_not_connected">Not connected to</string>
    <string name="is_on">Is on</string>
    <string name="is_off">Is off</string>
</resources>