<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/sunday"
            style="@style/TimeNotSelected"
            android:text="@string/day_sunday" />

        <TextView
            android:id="@+id/monday"
            style="@style/TimeSelected"
            android:text="@string/day_monday" />

        <TextView
            android:id="@+id/tuesday"
            style="@style/TimeSelected"
            android:text="@string/day_tuesday" />

        <TextView
            android:id="@+id/wednesday"
            style="@style/TimeSelected"
            android:text="@string/day_wednesday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/thursday"
            style="@style/TimeSelected"
            android:text="@string/day_thursday" />

        <TextView
            android:id="@+id/friday"
            style="@style/TimeSelected"
            android:text="@string/day_friday" />

        <TextView
            android:id="@+id/saturday"
            style="@style/TimeNotSelected"
            android:text="@string/day_saturday" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:visibility="invisible" />
    </LinearLayout>

</LinearLayout>