<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/pop_up_enable"
        android:showAsAction="always|withText"
        android:title="@string/enableText"/>
    <item
        android:id="@+id/pop_up_delete"
        android:icon="@drawable/ic_action_trash"
        android:showAsAction="always|withText"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/pop_up_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always|withText"
        android:title="@string/menu_context_edit"/>
    <item
        android:id="@+id/pop_up_run"
        android:icon="@drawable/ic_action_playback_play"
        android:showAsAction="always|withText"
        android:title="@string/menu_context_run"/>

</menu>