<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BGColor"  >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/list_selector"
                android:clickable="true"
                android:text="12:00"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sunday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_sunday" />

                <TextView
                    android:id="@+id/monday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_monday" />

                <TextView
                    android:id="@+id/tuesday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_tuesday" />

                <TextView
                    android:id="@+id/wednesday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_wednesday" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/thursday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_thursday" />

                <TextView
                    android:id="@+id/friday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_friday" />

                <TextView
                    android:id="@+id/saturday"
                    style="@style/TimeNotSelected"
                    android:text="@string/day_saturday" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>