<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/showWelcomeButton"
            style="@style/PreferenceContainerNoCheckbox"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:onClick="preferenceClicked">

            <TextView
                android:id="@+id/prefshowWelcomeText"
                style="@style/PreferenceTitle"
                android:text="@string/show_welcome" />
        </RelativeLayout>

        <View style="@style/SpacerLightPadded" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/prefShowDescriptionCheckbox"
            style="@style/PreferencesSwitch"
            android:text="@string/show_actions_in_list" />

        <View style="@style/SpacerLightPadded" />

        <RelativeLayout
            android:id="@+id/alarmPackageButton"
            style="@style/PreferenceContainerNoCheckbox"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:onClick="preferenceClicked">

            <TextView
                android:id="@+id/alarmPackageText"
                style="@style/PreferenceTitlePrimary"
                android:text="@string/set_alarm_app" />

            <TextView
                android:id="@+id/alarmPackageSubText"
                style="@style/PreferenceTitleSub"
                android:layout_below="@id/alarmPackageText"
                android:text="@string/layoutPreferencesNotificationsSubNone" />
        </RelativeLayout>

        <View style="@style/SpacerLightPadded" />

        <RelativeLayout
            android:id="@+id/mediaPackageButton"
            style="@style/PreferenceContainerNoCheckbox"
            android:background="@drawable/list_selector"
            android:clickable="true"
            android:onClick="preferenceClicked">

            <TextView
                android:id="@+id/mediaPackageText"
                style="@style/PreferenceTitlePrimary"
                android:text="@string/set_media_app" />

            <TextView
                android:id="@+id/mediaPackageSubText"
                style="@style/PreferenceTitleSub"
                android:layout_below="@id/mediaPackageText"
                android:text="@string/layoutPreferencesNotificationsSubNone" />
        </RelativeLayout>

        <View style="@style/SpacerLightPadded" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/prefPowerForegroundService"
            style="@style/PreferencesSwitch"
            android:singleLine="false"
            android:checked="true"
            android:text="@string/power_service_pref" />

        <TextView
            android:id="@+id/prefPowerText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/PreferenceTitleSub"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:text="@string/power_service_on" />
    </LinearLayout>
</ScrollView>