<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/connection_type"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ConstraintConditionText"
            android:checked="true"
            android:text="@string/constraint_connected"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/not_connected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ConstraintConditionText"
            android:text="@string/constraint_not_connected"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/is_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ConstraintConditionText"
            android:text="@string/is_on"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/is_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ConstraintConditionText"
            android:text="@string/is_off"/>

    </RadioGroup>

    <TextView
        android:id="@+id/bluetooth_picker"
        style="@style/ConstraintText"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="24dp"
        android:background="@drawable/list_selector"
        android:clickable="true"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="8dp"
        android:text="@string/any_device"/>

</LinearLayout>