<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Option032"
    style="@style/ActionNoMarginPadded"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        style="@style/ConfigurationActionHeading"
        android:text="@string/layoutEmailAddress" />

    <View style="@style/SpacerBGNoPadding" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/emailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:hint="you@example.com"
            android:singleLine="true" />

        <include layout="@layout/include_contact_picker_button" />
    </LinearLayout>

    <TextView
        style="@style/ConfigurationActionHeading"
        android:text="@string/layoutEmailMessage" />

    <View style="@style/SpacerBGNoPadding" />

    <EditText
        android:id="@+id/emailSubject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/layoutEmailSubjectHint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/emailMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:gravity="top"
        android:hint="@string/layoutEmailMessageHint"
        android:lines="5"
        android:singleLine="false" />

</LinearLayout>