<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/dialog_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/upgrade_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/upgrade_heading" />

        <TextView
            android:id="@+id/upgrade_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_trial" />
    </LinearLayout>

    <LinearLayout
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="true">

        <Button
            android:id="@+id/upgrade_button"
            style="@style/material_button_flat_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade" />

        <Button
            android:id="@+id/trial_button"
            style="@style/material_button_flat_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_trial" />
    </LinearLayout>

</LinearLayout>