<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/prefAnalytics"
            style="@style/PreferencesSwitch"
            android:text="@string/layoutPreferencesUsage" />

        <View style="@style/SpacerLightPadded" />

        <RelativeLayout
            android:id="@+id/requestRoot"
            style="@style/PreferenceContainerNoCheckbox"
            android:clickable="true"
            android:onClick="preferenceClicked"
            android:background="@drawable/list_selector">

            <TextView
                style="@style/PreferenceTitle"
                android:text="@string/request_root_access" />
        </RelativeLayout>

        <View style="@style/SpacerLightPadded" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/prefDebug"
            style="@style/PreferencesSwitch"
            android:text="@string/layoutPreferencesDebugOutput" />

        <View style="@style/SpacerLightPadded" />

        <RelativeLayout
            android:id="@+id/prefDebugSendContainer"
            style="@style/PreferenceContainerNoCheckbox"
            android:clickable="true"
            android:onClick="preferenceClicked"
            android:background="@drawable/list_selector">

            <TextView
                android:id="@+id/prefDebugSendText"
                style="@style/PreferenceTitle"
                android:text="@string/layoutPreferencesDebugSend" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>